activity_main.xml

--- a/Calculaotr/app/src/main/res/layout/activity_main.xml
+++ b/Calculaotr/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
                 android:onClick="buttonClick"
                 android:text="%"
                 android:textSize="18sp"/>
-            
+
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
@@ -70,10 +70,53 @@
                 android:text="CE"
                 android:textSize="18sp"/>
 
+            <Button
+                android:id="@+id/btn_clear"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#3EBAB4B4"
+                android:text="C"
+                android:textSize="18sp"/>
+
+            <Button
+                android:id="@+id/btn_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#3EBAB4B4"
+                android:text="Del"
+                android:onClick="deleteClick"
+                android:textSize="18sp"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#3EBAB4B4"
+                android:clickable="false"
+                android:enabled="false"
+                android:text="1/x"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#3EBAB4B4"
+                android:clickable="false"
+                android:enabled="false"
+                android:text="x^2"
+                android:textSize="18sp" />
+
+
 
 
         </TableRow>
-
 
 
 
