--- a/Calculaotr/app/src/main/res/layout/activity_main.xml
+++ b/Calculaotr/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,6 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="171dp">
@@ -25,7 +23,7 @@
             android:layout_marginTop="44dp"
             android:layout_marginRight="20dp"
 
-            android:textSize="30sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txt_result"
@@ -36,7 +34,7 @@
 
             android:layout_marginTop="25dp"
             android:textColor="@color/colorBlack"
-            android:textSize="36dp"
+            android:textSize="36sp"
             android:textStyle="bold" />
     </RelativeLayout>
 
@@ -45,47 +43,54 @@
         android:layout_height="match_parent"
         android:stretchColumns="*">
 
-
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
+
             <Button
-                android:id="@+id/btn_mod"
+                android:id="@+id/btn_division"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="#3EBAB4B4"
                 android:onClick="buttonClick"
-                android:text="%"
-                android:textSize="18sp"/>
+                android:text="/"
+                android:textSize="18sp" />
 
             <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
+                android:id="@+id/btn_mod"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="#3EBAB4B4"
-                android:clickable="false"
-                android:enabled="false"
-                android:text="CE"
-                android:textSize="18sp"/>
+                android:onClick="buttonClick"
+                android:text="%"
+                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/btn_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="#3EBAB4B4"
+                android:onClick="clearClick"
                 android:text="C"
-                android:textSize="18sp"/>
+                android:textSize="30sp" />
 
             <Button
                 android:id="@+id/btn_delete"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="#3EBAB4B4"
-                android:text="Del"
                 android:onClick="deleteClick"
-                android:textSize="18sp"/>
+                android:text="Del"
+                android:textSize="30sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
         </TableRow>
 
         <TableRow
@@ -94,51 +99,178 @@
             android:layout_weight="1">
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/btn_seven"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:backgroundTint="#3EBAB4B4"
-                android:clickable="false"
-                android:enabled="false"
-                android:text="1/x"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="7"
+                android:textColor="@color/colorBlack"
                 android:textSize="18sp" />
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/btn_eight"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="8"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/btn_nine"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="9"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/btn_multi"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="#3EBAB4B4"
-                android:clickable="false"
-                android:enabled="false"
-                android:text="x^2"
+                android:onClick="buttonClick"
+                android:text="x"
                 android:textSize="18sp" />
-
-
-
-
         </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
+            <Button
+                android:id="@+id/btn_four"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="4"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_five"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="5"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_six"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="6"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#3EBAB4B4"
+                android:onClick="buttonClick"
+                android:text="-"
+                android:textSize="18sp" />
+        </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
+            <Button
+                android:id="@+id/btn_one"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="1"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_two"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="2"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_three"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="3"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#3EBAB4B4"
+                android:onClick="buttonClick"
+                android:text="+"
+                android:textSize="18sp" />
+        </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
+            <Button
+                android:id="@+id/button22"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:clickable="false"
+                android:enabled="false"
+                android:text="+/-"
+                android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_zero"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:onClick="buttonClick"
+                android:text="0"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btn_dot"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#85FFFFFF"
+                android:text="."
+                android:onClick="buttonClick"
+                android:textColor="@color/colorBlack"
+                android:textSize="18sp" />
 
-
-
-
+            <Button
+                android:id="@+id/btn_result"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:backgroundTint="#539FC1"
+                android:text="="
+                android:onClick="equalClick"
+                android:textSize="18sp" />
+        </TableRow>
     </TableLayout>
-
-
-
-
-
 </LinearLayout>
