--- a/WishListProject/app/src/main/res/layout/activity_main.xml
+++ b/WishListProject/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,17 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+
+
     <TextView
         android:id="@+id/textView"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_margin="20dp"
         android:text="Wish List"
         android:textColor="@color/black"
-        android:textSize="30sp"
+        android:textSize="40sp"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -23,22 +26,18 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btn1"
+        android:id="@+id/btn_add"
         android:layout_width="70dp"
-        android:layout_height="wrap_content" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv"
-        android:layout_width="345dp"
-        android:layout_height="470dp"
-        android:layout_margin="20dp"
-        android:scrollbars="vertical"
+        android:layout_height="51dp"
+        android:layout_gravity="right"
+        android:backgroundTint="@color/white"
+        android:text="ADD"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.235"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintHorizontal_bias="0.715"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.031" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
