--- a/KotlinApp/Design Pattern/MVVM/MVVM_Example/app/src/main/res/layout/activity_setnum.xml
+++ b/KotlinApp/Design Pattern/MVVM/MVVM_Example/app/src/main/res/layout/activity_setnum.xml
@@ -1,37 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SetMaxActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
             name="viewmodelSetMaxNum"
-            type="viewModel.MainViewModel" />
+            type="com.Activity.databinding.ActivitySetnumBindingImpl" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <EditText
+            android:id="@+id/maxnum"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="최대값을 적어 주십시오"
             android:layout_gravity="center"
-            android:gravity="center"
             android:layout_marginTop="300dp"
-            android:id="@+id/maxnum"
-            />
+            android:gravity="center"
+            android:hint="최대값을 적어 주십시오" />
 
         <Button
+            android:id="@+id/complete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="완료"
-            android:textSize="20dp"
-            android:id="@+id/complete"
-            android:layout_gravity="center"/>
+            android:textSize="20dp" />
 
     </LinearLayout>
 </layout>
